# sglang

./: .gitignore
examples/: benchmark.py  hosttest.py  mytest.py  run_test.sh
examples/frontend_language/quick_start/: local_example_complete.py
examples/runtime/engine/: offline_batch_inference.py
python/sglang/: bench_serving.py  launch_server.py
python/sglang/ext/: offload.py
python/sglang/ext/host_launcher/: CMakeLists.txt  bindings.cpp  so_test.py
python/sglang/ext/host_launcher/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
python/sglang/ext/host_launcher/operator/: linear.cpp  linear.h
python/sglang/srt/: hf_transformers_utils.py  server.py  server_args.py  utils.py
python/sglang/srt/configs/: model_config.py
python/sglang/srt/constrained/: outlines_jump_forward.py  xgrammar_backend.py
python/sglang/srt/distributed/: parallel_state.py
python/sglang/srt/distributed/device_communicators/: custom_all_reduce.py
python/sglang/srt/layers/: layernorm.py  linear.py  logits_processor.py  pooler.py  radix_attention.py  rotary_embedding.py  vocab_parallel_embedding.py
python/sglang/srt/layers/attention/: flashattention_backend.py  flashinfer_backend.py  torch_native_backend.py  triton_backend.py
python/sglang/srt/layers/attention/triton_ops/: decode_attention.py  extend_attention.py  prefill_attention.py
python/sglang/srt/layers/deep_gemm_wrapper/: entrypoint.py
python/sglang/srt/layers/moe/: fused_moe_native.py  topk.py
python/sglang/srt/layers/moe/ep_moe/: kernels.py  layer.py  token_dispatcher.py
python/sglang/srt/layers/moe/fused_moe_triton/: layer.py
python/sglang/srt/layers/quantization/: __init__.py  deep_gemm.py
python/sglang/srt/lora/: layers.py  lora.py  lora_manager.py
python/sglang/srt/managers/: cache_controller.py  data_parallel_controller.py  schedule_batch.py  schedule_policy.py  scheduler.py  scheduler_output_processor_mixin.py  tp_worker.py  tp_worker_overlap_thread.py
python/sglang/srt/mem_cache/: chunk_cache.py  hiradix_cache.py  memory_pool.py  radix_cache.py
python/sglang/srt/model_executor/: cuda_graph_runner.py  forward_batch_info.py  model_runner.py
python/sglang/srt/model_loader/: __init__.py  loader.py
python/sglang/srt/models/: deepseek_v2.py  qwen2.py
rust/src/: router.rs
sgl-kernel/csrc/allreduce/: custom_all_reduce.cu  custom_all_reduce.cuh
sgl-router/src/: router.rs  server.rs  tree.rs
